k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: ghcr.io/dhruv1249/pr-tracker-auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5005
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
  - protocol: TCP
    port: 5005
    targetPort: 5005
