k8s/service-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-router
  template:
    metadata:
      labels:
        app: service-router
    spec:
      containers:
      - name: service-router
        image: ghcr.io/dhruv1249/pr-tracker-service-router:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: service-router
  annotations:
    traefik.ingress.kubernetes.io/service.nativelb: "true"
spec:
  selector:
    app: service-router
  ports:
  - protocol: TCP
    port: 5003
    targetPort: 5003
